--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,25 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Adminpro</title>
-  
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
-  <!-- Bootstrap Core CSS -->
-  <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom CSS -->
-  <link href="assets/css/style.css" rel="stylesheet">
-  <!-- You can change the theme colors from here -->
-  <link href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<head>
+    <meta charset="utf-8">
+    <title>Adminpro</title>
+
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
+    <!-- Bootstrap Core CSS -->
+    <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link href="assets/css/style.css" rel="stylesheet">
+    <!-- You can change the theme colors from here -->
+    <link id="tema" href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
+    <base href="/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body class="fix-header card-no-border fix-sidebar">
-  <!-- ============================================================== -->
+    <!-- ============================================================== -->
     <!-- Preloader - style you can find in spinners.css -->
     <!-- ============================================================== -->
     <div class="preloader">
@@ -26,9 +28,9 @@
             <p class="loader__label">Admin ProS</p>
         </div>
     </div>
-    
-  <app-root></app-root>
-  <!-- All Jquery -->
+
+    <app-root></app-root>
+    <!-- All Jquery -->
     <!-- ============================================================== -->
     <script src="assets/plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
@@ -39,11 +41,13 @@
     <!--Wave Effects -->
     <script src="assets/js/waves.js"></script>
     <!--Menu sidebar -->
-    <script src="assets/js/sidebarmenu.js"> </script>
+    <script src="assets/js/sidebarmenu.js">
+    </script>
     <!--stickey kit -->
     <script src="assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
     <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script>
     <!--Custom JavaScript -->
-    <script src="assets/js/custom.min.js"></script>
+    <script src="assets/js/custom.js"></script>
 </body>
+
 </html>
