Implementacion de Login y Registro

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,10 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <!-- GOOGLE -->
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <meta name="google-signin-client_id" content="850762712020-44ps6sntregoouahsg4tff853dp60v8c.apps.googleusercontent.com">
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
